--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ nav {
     border-left: 8px solid darkviolet;
 }
 
+i {
+    font-size: 1.2rem;
+}
 a {
     color: darkviolet;
     font-family: 'Fraunces';
